--- a/Barber.Colocho/WEB/Barber.Colocho.Infraestructure.Data/Barber.Colocho.Infraestructure.Data.csproj
+++ b/Barber.Colocho/WEB/Barber.Colocho.Infraestructure.Data/Barber.Colocho.Infraestructure.Data.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Barber.Colocho.Infraestructure.Common\Barber.Colocho.Transversal.Common.csproj" />
+  </ItemGroup>
+
 </Project>
