--- a/Barber.Colocho/WEB/Barber.Colocho.Infraestructure.Mapper/Barber.Colocho.Transversal.Mapper.csproj
+++ b/Barber.Colocho/WEB/Barber.Colocho.Infraestructure.Mapper/Barber.Colocho.Transversal.Mapper.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\Barber.Colocho.Domain.Entity\Barber.Colocho.Domain.Entity.csproj" />
     <ProjectReference Include="..\Barber.Colocho.Domain.Interface\Barber.Colocho.Domain.Interface.csproj" />
     <ProjectReference Include="..\Barber.Colocho.Infraestructure.Data\Barber.Colocho.Infraestructure.Data.csproj" />
+    <ProjectReference Include="..\Barber.Colocho.Infraestructure.Persistence\Barber.Colocho.Infraestructure.Persistence.csproj" />
     <ProjectReference Include="..\Barber.Colocho.Infraestructure.Repository\Barber.Colocho.Infraestructure.Repository.csproj" />
   </ItemGroup>
 
