--- a/Barber.Colocho/WEB/Barber.Colocho.Application.DTO/Barber.Colocho.Application.DTO.csproj
+++ b/Barber.Colocho/WEB/Barber.Colocho.Application.DTO/Barber.Colocho.Application.DTO.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Barber.Colocho.Infraestructure.Common\Barber.Colocho.Transversal.Common.csproj" />
+  </ItemGroup>
+
 </Project>
