--- a/Barber.Colocho/WEB/Barber.Colocho.Web/appsettings.json
+++ b/Barber.Colocho/WEB/Barber.Colocho.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=CARLOSDIAZLOPEZ;Database=Barber;User Id=sa;Password=1234567890;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=DIAZ;Database=Barber;User Id=sa;Password=1234567890;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "JwtKey": "MEXICO.SALTILLOyt43443yt423uytuyeruyreerwrwyt432243",
